# indlovu

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml
crates/indlovu-compliance/: Cargo.toml
crates/indlovu-compliance/src/: audit.rs  compliant_store.rs  erasure.rs  lib.rs  retention.rs
crates/indlovu-core/: Cargo.toml
crates/indlovu-core/src/: collection.rs  error.rs  lib.rs  metadata.rs  traits.rs  types.rs
crates/indlovu-python/: Cargo.toml
crates/indlovu-python/src/: lib.rs
crates/indlovu-server/: Cargo.toml
crates/indlovu-server/src/: handlers.rs  lib.rs  main.rs  routes.rs  state.rs
docs/: AI_CONTEXT.md  KNOWLEDGE_BASE_ENTRY.md  PROJECT_OVERVIEW.md
examples/: quickstart.rs
site/: index.html
