[package]
name = "indlovu-compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "POPIA/GDPR compliance layer for Indlovu — audit trails, PII tagging, right-to-erasure"

[dependencies]
indlovu-core = { path = "../indlovu-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
