[package]
name = "indlovu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core vector storage engine with HNSW indexing for Indlovu"

[dependencies]
usearch.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
