[package]
name = "indlovu-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for the Indlovu vector database"

[lib]
name = "indlovu"
crate-type = ["cdylib"]

[dependencies]
indlovu-core = { path = "../indlovu-core" }
indlovu-compliance = { path = "../indlovu-compliance" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
