[package]
name = "indlovu-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server for Indlovu vector database"

[dependencies]
indlovu-core = { path = "../indlovu-core" }
indlovu-compliance = { path = "../indlovu-compliance" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http.workspace = true
